tests/idris2/error/perror009/Error1.idr

data Foo : Type where
  FooBase : Foo
  (@) : Foo -> Foo -> Foo
